# AMR_Pattern_Matcher_n_Docking

./: README.md
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/msg/: UltrasonicSensorData.msg
diff_drive_edubot/: CMakeLists.txt  diff_drive.xml  package.xml
diff_drive_edubot/config/: diff_drive.ros2_control.xacro  diff_drive.urdf.xacro  diff_drive_gazebo.xacro  diffbot.rviz  lidar.xacro  ros2_controllers.yaml
diff_drive_edubot/hardware/: diff_drive_hardware.cpp
diff_drive_edubot/hardware/include/diff_drive/: diff_drive_hardware.hpp  visibility_control.h
diff_drive_edubot/launch/: gazebo.launch.py  ros2_control.launch.py
diff_drive_edubot/urdf/: diffbot.urdf  turtlebot3_waffle.urdf
imu_odometry_updater/: CMakeLists.txt  package.xml
imu_odometry_updater/src/: imu_odometry.cpp
joint_state_pub_edubot/: CMakeLists.txt  package.xml
joint_state_pub_edubot/src/: esp_connect.cpp  r6bot_hardware.cpp
matcher_action_interfaces/: CMakeLists.txt  package.xml
matcher_action_interfaces/action/: Matcher.action
pattern_matcher/: CMakeLists.txt  package.xml
pattern_matcher/config/: rviz.rviz  rviz_1.rviz  tb3_nav2_params.yaml
pattern_matcher/launch/: gazebo.launch.py  matcher.launch.py  pattern_matcher.launch.py
pattern_matcher/models/: model.config  model.sdf
pattern_matcher/pcd/: pattern_1.pcd  pattern_new.pcd
pattern_matcher/src/: recorder.cpp  robot_control.cpp  scan_to_pointcloud_node.cpp  scan_to_pointcloud_node_1.cpp  scan_to_pointcloud_node_original.cpp  scan_to_pointcloud_node_tem.cpp  single_navigator.py
pattern_matcher/urdf/: pattern.urdf
ros2_learners/navigation_tb3/config/: room_map.pgm  room_map.yaml  tb3_nav2_params.yaml
ros2_learners/turtlebot3_gazebo/worlds/: turtlebot3_room.world
ultrasonic_sensor/: CMakeLists.txt  package.xml
ultrasonic_sensor/src/: get_data  get_data.cpp  get_data.py  get_data_threading.py  test.py  ultrasonic_sensor_node.cpp
